Update logic, comment out old logic

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="display-1">Guess me!</h1>
       <p class="lead">I'm thinking of a number between 1 and 10, can you guess it?</p>
 
-      <button class="btn btn-primary btn-lg" role="button" id="play" onclick="writeResult(guessingGame())">Play!</button>
+      <button class="btn btn-primary btn-lg" role="button" id="play">Play!</button>
 
       <p id="result" class="lead mt-4"></p>
     </div>
