--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
 </head>
 <body>
   <main class="main-content jumbotron jumbotron-fluid mb-0 d-flex">
-    <div class="container text-center m-auto">
-      <h1 class="display-1">Guess me!</h1>
-      <p class="lead">I'm thinking of a number between 1 and 10, can you guess it?</p>
+    <div id="app" class="container text-center m-auto">
 
-      <button class="btn btn-primary btn-lg" role="button" id="play">Play!</button>
-
-      <p id="result" class="lead mt-4"></p>
     </div>
-
   </main>
 
   <!-- External javascipt -->
