Update bootstrap classes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Guessing Game</title>
 </head>
 <body>
-  <main class="main-content jumbotron jumbotron-fluid mb-0 d-flex">
+  <main class="main-content jumbotron mb-0 d-flex">
     <div id="app" class="container text-center m-auto">
 
     </div>
