deleted the innecesary  mocks folder

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </head>
 <body>
   <main class="main-content jumbotron mb-0 d-flex">
-    <div id="app" class="container text-center m-auto">
-
-    </div>
+    <div id="app" class="container text-center m-auto"></div>
   </main>
 
   <!-- External javascipt -->
